Desarrollo de test para aumentar Cobertura en Sonar